hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__rebinding.snap
---
source: hir/src/passes/resolver.rs
expression: hir
---
Hir {
    identifiers: [
        IdentId(0) => "x",
        IdentId(1) => "add",
        IdentId(2) => "boolean",
        IdentId(3) => "div",
        IdentId(4) => "eq",
        IdentId(5) => "ge",
        IdentId(6) => "gt",
        IdentId(7) => "le",
        IdentId(8) => "lt",
        IdentId(9) => "mul",
        IdentId(10) => "neg",
        IdentId(11) => "neq",
        IdentId(12) => "number",
        IdentId(13) => "string",
        IdentId(14) => "sub",
        IdentId(15) => "void",
    ],
    identifier_refs: [
        IdentRefId(0) => IdentifierRef {
            id: IdentRefId(0),
            ident: Identifier {
                id: IdentId(0),
                span: 1:26; [25, 26],
                bound: Bound(19),
            },
        },
        IdentRefId(1) => IdentifierRef {
            id: IdentRefId(1),
            ident: Identifier {
                id: IdentId(1),
                span: 1:28; [27, 28],
                bound: Bound(17),
            },
        },
    ],
    expressions: [
        ExprId(0) => Expression {
            id: ExprId(0),
            kind: Literal(
                Literal {
                    kind: Boolean(true),
                    span: 1:9; [8, 12],
                },
            ),
            span: 1:9; [8, 12],
            typed: Typed(3),
        },
        ExprId(1) => Expression {
            id: ExprId(1),
            kind: Literal(
                Literal {
                    kind: Number(1),
                    span: 1:23; [22, 23],
                },
            ),
            span: 1:23; [22, 23],
            typed: Typed(4),
        },
        ExprId(2) => Expression {
            id: ExprId(2),
            kind: Literal(
                Literal {
                    kind: IdentRefId(0),
                    span: 1:26; [25, 26],
                },
            ),
            span: 1:26; [25, 26],
            typed: Typed(4),
        },
        ExprId(3) => Expression {
            id: ExprId(3),
            kind: Literal(
                Literal {
                    kind: Number(1),
                    span: 1:30; [29, 30],
                },
            ),
            span: 1:30; [29, 30],
            typed: Typed(4),
        },
        ExprId(4) => Expression {
            id: ExprId(4),
            kind: FunctionCall(
                IdentRefId(1),
                [
                    ExprId(2),
                    ExprId(3),
                ],
            ),
            span: 1:26; [25, 30],
            typed: Typed(4),
        },
    ],
    statements: [
        StmtId(0) => Statement {
            id: StmtId(0),
            kind: Let(
                Identifier {
                    id: IdentId(0),
                    span: 1:5; [4, 5],
                    bound: Bound(18),
                },
                ExprId(0),
            ),
            span: 1:1; [0, 13],
        },
        StmtId(1) => Statement {
            id: StmtId(1),
            kind: Let(
                Identifier {
                    id: IdentId(0),
                    span: 1:19; [18, 19],
                    bound: Bound(19),
                },
                ExprId(1),
            ),
            span: 1:15; [14, 24],
        },
        StmtId(2) => Statement {
            id: StmtId(2),
            kind: Expression(
                ExprId(4),
            ),
            span: 1:26; [25, 31],
        },
    ],
    type_defs: [],
    roots: [
        StmtId(0),
        StmtId(1),
        StmtId(2),
    ],
    symbols: [
        SymbolId(0) => Symbol {
            id: SymbolId(0),
            kind: NotFound,
            type_id: TypeId(0),
        },
        SymbolId(1) => Symbol {
            id: SymbolId(1),
            kind: NativeType(
                IdentId(15),
                Void,
            ),
            type_id: TypeId(2),
        },
        SymbolId(2) => Symbol {
            id: SymbolId(2),
            kind: NativeType(
                IdentId(13),
                String,
            ),
            type_id: TypeId(2),
        },
        SymbolId(3) => Symbol {
            id: SymbolId(3),
            kind: NativeType(
                IdentId(12),
                Number,
            ),
            type_id: TypeId(2),
        },
        SymbolId(4) => Symbol {
            id: SymbolId(4),
            kind: NativeType(
                IdentId(2),
                Boolean,
            ),
            type_id: TypeId(2),
        },
        SymbolId(5) => Symbol {
            id: SymbolId(5),
            kind: Native(
                IdentId(14),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                SubNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(6) => Symbol {
            id: SymbolId(6),
            kind: Native(
                IdentId(11),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                NeqNumberNumber,
            ),
            type_id: TypeId(7),
        },
        SymbolId(7) => Symbol {
            id: SymbolId(7),
            kind: Native(
                IdentId(11),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                NeqBooleanBoolean,
            ),
            type_id: TypeId(8),
        },
        SymbolId(8) => Symbol {
            id: SymbolId(8),
            kind: Native(
                IdentId(10),
                [
                    TypeId(4),
                ],
                TypeId(4),
                NegNumber,
            ),
            type_id: TypeId(9),
        },
        SymbolId(9) => Symbol {
            id: SymbolId(9),
            kind: Native(
                IdentId(9),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                MulNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(10) => Symbol {
            id: SymbolId(10),
            kind: Native(
                IdentId(8),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LtNumberNumber,
            ),
            type_id: TypeId(7),
        },
        SymbolId(11) => Symbol {
            id: SymbolId(11),
            kind: Native(
                IdentId(7),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LeNumberNumber,
            ),
            type_id: TypeId(7),
        },
        SymbolId(12) => Symbol {
            id: SymbolId(12),
            kind: Native(
                IdentId(6),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GtNumberNumber,
            ),
            type_id: TypeId(7),
        },
        SymbolId(13) => Symbol {
            id: SymbolId(13),
            kind: Native(
                IdentId(5),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GeNumberNumber,
            ),
            type_id: TypeId(7),
        },
        SymbolId(14) => Symbol {
            id: SymbolId(14),
            kind: Native(
                IdentId(4),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                EqNumberNumber,
            ),
            type_id: TypeId(7),
        },
        SymbolId(15) => Symbol {
            id: SymbolId(15),
            kind: Native(
                IdentId(4),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                EqBooleanBoolean,
            ),
            type_id: TypeId(8),
        },
        SymbolId(16) => Symbol {
            id: SymbolId(16),
            kind: Native(
                IdentId(3),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                DivNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(17) => Symbol {
            id: SymbolId(17),
            kind: Native(
                IdentId(1),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                AddNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(18) => Symbol {
            id: SymbolId(18),
            kind: Let(
                IdentId(0),
                StmtId(0),
            ),
            type_id: TypeId(3),
        },
        SymbolId(19) => Symbol {
            id: SymbolId(19),
            kind: Let(
                IdentId(0),
                StmtId(1),
            ),
            type_id: TypeId(4),
        },
    ],
    types: [
        TypeId(0) => Invalid,
        TypeId(1) => Void,
        TypeId(2) => None,
        TypeId(3) => Boolean,
        TypeId(4) => Number,
        TypeId(5) => String,
        TypeId(6) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(4),
        ),
        TypeId(7) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(3),
        ),
        TypeId(8) => Function(
            [
                TypeId(3),
                TypeId(3),
            ],
            TypeId(3),
        ),
        TypeId(9) => Function(
            [
                TypeId(4),
            ],
            TypeId(4),
        ),
    ],
    exit_points: ExitPoints {
        exit_points: {},
        unreachable: [],
    },
}
