hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__resolve_missing_def.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'n' not found",
                span: 1:13; [12, 13],
                level: Error,
            },
        ],
        inputs: (),
    },
)
